<resources>
    <string name="app_name">Kelkar Mishthanna</string>
    <string name="Login">login\n</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="contact_no">Contact No</string>
</resources>